--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Portfolio</title>
+    <title>consoletree | Portfolio</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <!-- Modern Fonts -->
@@ -207,7 +207,6 @@
                     <a href="#home" class="px-4 py-2 text-sm font-medium text-slate-600 dark:text-slate-300 hover:text-primary dark:hover:text-white hover:bg-white/50 dark:hover:bg-white/10 rounded-full transition-all">Home</a>
                     <a href="#about" class="px-4 py-2 text-sm font-medium text-slate-600 dark:text-slate-300 hover:text-primary dark:hover:text-white hover:bg-white/50 dark:hover:bg-white/10 rounded-full transition-all">About</a>
                     <a href="#projects" class="px-4 py-2 text-sm font-medium text-slate-600 dark:text-slate-300 hover:text-primary dark:hover:text-white hover:bg-white/50 dark:hover:bg-white/10 rounded-full transition-all">Projects</a>
-                    <!-- Updated Contact button to match other nav links (removed filled background style) -->
                     <a href="#contact" class="px-4 py-2 text-sm font-medium text-slate-600 dark:text-slate-300 hover:text-primary dark:hover:text-white hover:bg-white/50 dark:hover:bg-white/10 rounded-full transition-all">Contact</a>
                 </div>
 
@@ -341,7 +340,7 @@
                             I'm a full-stack developer based in Toronto with a passion for building digital services/stuff I want. I have a knack for all things launching products, from planning and designing all the way to solving real-life problems with code.
                         </p>
                         <p>
-                            Currently, I am focused on building accessible, human-centered products at <span class="text-slate-900 dark:text-white font-semibold">Upwork</span>. When I'm not at the computer, I'm usually hanging out with my cat, reading, or running.
+                            Currently, I am focused on <span class="text-slate-900 dark:text-white font-semibold">DevOps</span>. offering human centered solutions via AWS and cloud based system. Implementing Gen AI is something that I am working on.
                         </p>
                     </div>
 
@@ -694,6 +693,7 @@
     </script>
 </body>
 </html>
+
 
 
 
