--- a/index.html
+++ b/index.html
@@ -396,11 +396,6 @@
                                 <h3 class="text-3xl font-heading font-bold text-white mb-2">Neon Marketplace</h3>
                                 <p class="text-slate-200 max-w-lg line-clamp-2">A futuristic shopping platform with 3D product previews and real-time inventory tracking built with Next.js and WebGL.</p>
                             </div>
-                            <div class="hidden md:flex gap-3">
-                                <a href="#" class="w-12 h-12 rounded-full bg-white text-black flex items-center justify-center hover:bg-primary hover:text-white transition-colors">
-                                    <i class="fas fa-arrow-up-right-from-square"></i>
-                                </a>
-                            </div>
                         </div>
                     </div>
                 </div>
@@ -581,10 +576,10 @@
 
                         <div class="flex gap-6">
                             <!-- Updated Social Icons: Removed hover:-translate-y-1, added hover:scale-110 and duration-300 for smoother effect -->
-                            <a "target="_blank" rel="noopener noreferrer" href="https://www.linkedin.com/in/abin-r/-antony" class="w-14 h-14 rounded-full glass-panel border border-slate-200 dark:border-white/10 flex items-center justify-center text-slate-600 dark:text-slate-300 text-xl hover:bg-white dark:hover:bg-white/10 hover:text-primary dark:hover:text-white hover:border-primary/30 transition-all duration-300 hover:scale-110 shadow-sm">
+                            <a target="_blank" rel="noopener noreferrer" href="https://www.linkedin.com/in/abin-r/-antony" class="w-14 h-14 rounded-full glass-panel border border-slate-200 dark:border-white/10 flex items-center justify-center text-slate-600 dark:text-slate-300 text-xl hover:bg-white dark:hover:bg-white/10 hover:text-primary dark:hover:text-white hover:border-primary/30 transition-all duration-300 hover:scale-110 shadow-sm">
                                 <i class="fab fa-linkedin-in"></i>
                             </a>
-                            <a "target="_blank" rel="noopener noreferrer" href="https://www.github.com/consoletree" class="w-14 h-14 rounded-full glass-panel border border-slate-200 dark:border-white/10 flex items-center justify-center text-slate-600 dark:text-slate-300 text-xl hover:bg-white dark:hover:bg-white/10 hover:text-primary dark:hover:text-white hover:border-primary/30 transition-all duration-300 hover:scale-110 shadow-sm">
+                            <a target="_blank" rel="noopener noreferrer" href="https://www.github.com/consoletree" class="w-14 h-14 rounded-full glass-panel border border-slate-200 dark:border-white/10 flex items-center justify-center text-slate-600 dark:text-slate-300 text-xl hover:bg-white dark:hover:bg-white/10 hover:text-primary dark:hover:text-white hover:border-primary/30 transition-all duration-300 hover:scale-110 shadow-sm">
                                 <i class="fab fa-github"></i>
                             </a>
                         </div>
@@ -693,6 +688,7 @@
     </script>
 </body>
 </html>
+
 
 
 
