--- a/index.html
+++ b/index.html
@@ -278,10 +278,8 @@
                         <!-- JavaScript -->
                         <i class="fab fa-js text-3xl text-yellow-400" title="JavaScript"></i>
 
-                        <!-- TypeScript (SVG) -->
-                        <svg class="h-7 w-7 text-blue-600 fill-current rounded" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" title="TypeScript">
-                            <path d="M1.125 0C.502 0 0 .502 0 1.125v21.75C0 23.498.502 24 1.125 24h21.75c.623 0 1.125-.502 1.125-1.125V1.125C24 .502 23.498 0 22.875 0H1.125zM11.523 10.5h1.758v6.938h-1.758V10.5zm.879-3c.594 0 1.074.48 1.074 1.074 0 .594-.48 1.074-1.074 1.074-.594 0-1.074-.48-1.074-1.074 0-.594.48-1.074 1.074-1.074zm7.988 8.648c0 2.227-1.289 3.281-3.691 3.281-1.895 0-3.184-.664-3.633-2.148l1.66-1.113c.273.859 1.016 1.406 2.051 1.406.879 0 1.504-.449 1.504-1.172 0-.605-.43-1.016-1.504-1.309-1.68-.469-2.52-1.113-2.52-2.52 0-1.895 1.309-3.086 3.496-3.086 1.621 0 2.832.605 3.301 1.953l-1.602 1.055c-.273-.664-.84-1.152-1.699-1.152-.762 0-1.348.371-1.348 1.055 0 .547.371.898 1.484 1.211 1.777.488 2.5 1.191 2.5 2.54z"/>
-                        </svg>
+                        <!-- HTML -->
+                        <i class="fab fa-html5 text-3xl text-yellow-400" title="HTML"></i>
 
                         <!-- CSS3 -->
                         <i class="fab fa-css3-alt text-3xl text-blue-500" title="CSS3"></i>
@@ -688,6 +686,7 @@
     </script>
 </body>
 </html>
+
 
 
 
