--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@
                     <h2 class="text-4xl font-heading font-bold text-slate-900 dark:text-white mb-4 transition-colors">Selected Works</h2>
                     <p class="text-slate-500 dark:text-slate-400 text-lg transition-colors">A glimpse into my digital playground.</p>
                 </div>
-                <a href="#" class="group flex items-center gap-2 text-primary dark:text-indigo-400 border-b border-primary/30 dark:border-indigo-400/30 pb-1 hover:border-primary dark:hover:border-indigo-400 transition-all">
+                <a target="_blank" rel="noopener noreferrer" href="https://github.com/consoletree?tab=repositories" class="group flex items-center gap-2 text-primary dark:text-indigo-400 border-b border-primary/30 dark:border-indigo-400/30 pb-1 hover:border-primary dark:hover:border-indigo-400 transition-all">
                     View GitHub
                     <i class="fas fa-arrow-right text-sm transform group-hover:translate-x-1 transition-transform"></i>
                 </a>
@@ -409,10 +409,10 @@
                     
                     <div class="absolute bottom-0 left-0 p-8 z-20">
                         <div class="flex gap-2 mb-3">
-                            <span class="px-3 py-1 rounded-full bg-white/20 backdrop-blur-md text-xs font-medium text-white border border-white/20">Mobile</span>
+                            <span class="px-3 py-1 rounded-full bg-white/20 backdrop-blur-md text-xs font-medium text-white border border-white/20">Terminal</span>
                         </div>
-                        <h3 class="text-2xl font-heading font-bold text-white mb-2">TaskFlow App</h3>
-                        <p class="text-slate-200 text-sm">Productivity reimagined with AI-driven task sorting.</p>
+                        <h3 class="text-2xl font-heading font-bold text-white mb-2">Hexie</h3>
+                        <p class="text-slate-200 text-sm">Color Selection in your fingertips.</p>
                     </div>
                 </div>
 
@@ -686,6 +686,7 @@
     </script>
 </body>
 </html>
+
 
 
 
