--- a/index.html
+++ b/index.html
@@ -402,7 +402,7 @@
                 <div class="group relative rounded-3xl overflow-hidden glass-panel border border-white/50 dark:border-white/10 hover:border-secondary/50 dark:hover:border-purple-500/50 transition-all duration-500 reveal delay-100 shadow-sm hover:shadow-xl">
                     <div class="absolute inset-0 bg-slate-300 dark:bg-slate-700 group-hover:scale-105 transition-transform duration-700">
                          <div class="w-full h-full flex items-center justify-center bg-slate-300 dark:bg-slate-700 text-slate-400 dark:text-slate-500">
-                            <i class="fas fa-mobile-screen text-8xl opacity-50"></i>
+                            <i class="fas fa-terminal text-8xl opacity-50"></i>
                         </div>
                     </div>
                     <div class="absolute inset-0 bg-gradient-to-t from-slate-900/90 via-slate-900/20 to-transparent z-10 pointer-events-none"></div>
@@ -686,6 +686,7 @@
     </script>
 </body>
 </html>
+
 
 
 
