--- a/index.html
+++ b/index.html
@@ -377,6 +377,14 @@
                 
                 <!-- Large Feature Item -->
                 <div class="lg:col-span-2 group relative rounded-3xl overflow-hidden glass-panel border border-white/50 dark:border-white/10 hover:border-primary/50 dark:hover:border-indigo-500/50 transition-all duration-500 reveal shadow-sm hover:shadow-xl">
+                    <!-- Status Badge: In Progress -->
+                    <div class="absolute top-5 right-5 z-30 flex items-center gap-2 px-3 py-1 rounded-full bg-black/20 backdrop-blur-md border border-white/20 text-xs font-medium text-white shadow-sm">
+                        <span class="relative flex h-2 w-2">
+                          <span class="animate-ping absolute inline-flex h-full w-full rounded-full bg-amber-400 opacity-75"></span>
+                          <span class="relative inline-flex rounded-full h-2 w-2 bg-amber-400"></span>
+                        </span>
+                        In Progress
+                    </div>
                     <div class="absolute inset-0 bg-slate-200 dark:bg-slate-800 group-hover:scale-105 transition-transform duration-700">
                          <div class="w-full h-full flex items-center justify-center bg-slate-200 dark:bg-slate-800 text-slate-300 dark:text-slate-600">
                             <i class="fas fa-shopping-bag text-9xl opacity-50"></i>
@@ -686,6 +694,7 @@
     </script>
 </body>
 </html>
+
 
 
 
