--- a/index.html
+++ b/index.html
@@ -418,6 +418,7 @@
                     <div class="absolute bottom-0 left-0 p-8 z-20">
                         <div class="flex gap-2 mb-3">
                             <span class="px-3 py-1 rounded-full bg-white/20 backdrop-blur-md text-xs font-medium text-white border border-white/20">Terminal</span>
+                            <span class="px-3 py-1 rounded-full bg-white/20 backdrop-blur-md text-xs font-medium text-white border border-white/20">Bash</span>
                         </div>
                         <h3 class="text-2xl font-heading font-bold text-white mb-2">Hexie</h3>
                         <p class="text-slate-200 text-sm">Color Selection in your fingertips.</p>
@@ -710,6 +711,7 @@
     </script>
 </body>
 </html>
+
 
 
 
