--- a/index.html
+++ b/index.html
@@ -596,7 +596,7 @@
 
                         <div class="flex gap-6">
                             <!-- Updated Social Icons: Removed hover:-translate-y-1, added hover:scale-110 and duration-300 for smoother effect -->
-                            <a target="_blank" rel="noopener noreferrer" href="https://www.linkedin.com/in/abin-r/-antony" class="w-14 h-14 rounded-full glass-panel border border-slate-200 dark:border-white/10 flex items-center justify-center text-slate-600 dark:text-slate-300 text-xl hover:bg-white dark:hover:bg-white/10 hover:text-primary dark:hover:text-white hover:border-primary/30 transition-all duration-300 hover:scale-110 shadow-sm">
+                            <a target="_blank" rel="noopener noreferrer" href="https://www.linkedin.com/in/itsaebin" class="w-14 h-14 rounded-full glass-panel border border-slate-200 dark:border-white/10 flex items-center justify-center text-slate-600 dark:text-slate-300 text-xl hover:bg-white dark:hover:bg-white/10 hover:text-primary dark:hover:text-white hover:border-primary/30 transition-all duration-300 hover:scale-110 shadow-sm">
                                 <i class="fab fa-linkedin-in"></i>
                             </a>
                             <a target="_blank" rel="noopener noreferrer" href="https://www.github.com/consoletree" class="w-14 h-14 rounded-full glass-panel border border-slate-200 dark:border-white/10 flex items-center justify-center text-slate-600 dark:text-slate-300 text-xl hover:bg-white dark:hover:bg-white/10 hover:text-primary dark:hover:text-white hover:border-primary/30 transition-all duration-300 hover:scale-110 shadow-sm">
@@ -708,3 +708,4 @@
     </script>
 </body>
 </html>
+
