--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Personal Portfolio</title>
 
     <!-- Favicon: Violet 'c' -->
-    <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90' font-weight='bold' font-family='monospace' fill='%238b5cf6'>c</text></svg>">
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='1em' font-size='90' font-weight='bold' font-family='monospace' fill='%238b5cf6'>C</text></svg>">
     
     <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
@@ -414,4 +414,5 @@
         </script>
 </body>
 </html>
+
 
