--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Personal Portfolio</title>
 
-    <!-- Favicon: Violet 'c' -->
-    <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg'><text y='1em' font-size='90' font-weight='bold' font-family='monospace' fill='%238b5cf6'>C</text></svg>">
+    <!-- Favicon: Violet 'c' (Centered) -->
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text x='50' y='50' dominant-baseline='central' text-anchor='middle' font-size='70' font-weight='bold' font-family='monospace' fill='%238b5cf6'>c</text></svg>">
     
     <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
@@ -414,6 +414,7 @@
         </script>
 </body>
 </html>
+
 
 
 
