--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Personal Portfolio</title>
+    <title>Personal Portfolio | Abin</title>
 
     <!-- Favicon: Violet 'c' -->
     <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text x='50' y='50' dy='.35em' text-anchor='middle' font-size='70' font-weight='bold' font-family='monospace' fill='%238b5cf6'>C</text></svg>">
@@ -433,3 +433,4 @@
         </script>
 </body>
 </html>
+
