--- a/index.html
+++ b/index.html
@@ -110,6 +110,8 @@
         .btn-primary:hover { transform: translateY(-2px); box-shadow: 0 10px 30px rgba(99, 102, 241, 0.25); }
         .btn-ghost { background: transparent; color: var(--text); border: 1px solid var(--border); }
         .btn-ghost:hover { background: var(--bg-subtle); border-color: var(--border-hover); }
+        .nav-cta .btn-primary { display: none; }
+        @media (min-width: 768px) { .nav-cta .btn-primary { display: inline-flex; } }
         .menu-toggle {
             display: flex; width: 40px; height: 40px; align-items: center; justify-content: center;
             background: var(--bg-subtle); border: 1px solid var(--border);
@@ -133,8 +135,9 @@
         /* Hero */
         .hero {
             min-height: 100vh; display: flex; flex-direction: column;
-            justify-content: center; padding: 120px 0 80px; position: relative;
+            justify-content: center; padding: 100px 0 60px; position: relative;
         }
+        @media (min-width: 768px) { .hero { padding: 120px 0 80px; } }
         .hero-badge {
             display: inline-flex; align-items: center; gap: 6px;
             padding: 6px 12px; background: var(--bg-subtle);
@@ -161,9 +164,10 @@
             max-width: 500px; margin-bottom: 32px; line-height: 1.6;
         }
         .hero-actions { display: flex; flex-wrap: wrap; gap: 12px; margin-bottom: 60px; }
-        .hero-stats { display: grid; grid-template-columns: repeat(3, 1fr); gap: 20px; max-width: 420px; }
+        .hero-stats { display: grid; grid-template-columns: repeat(3, 1fr); gap: 16px; max-width: 420px; }
+        @media (max-width: 400px) { .hero-stats { gap: 12px; } }
         .stat-value {
-            font-size: 32px; font-weight: 800; letter-spacing: -0.02em;
+            font-size: clamp(24px, 6vw, 32px); font-weight: 800; letter-spacing: -0.02em;
             color: var(--text); line-height: 1; margin-bottom: 4px;
         }
         .stat-label {
@@ -202,7 +206,8 @@
         }
 
         /* Sections */
-        section { padding: 100px 0; }
+        section { padding: 64px 0; }
+        @media (min-width: 768px) { section { padding: 100px 0; } }
         .section-header { margin-bottom: 48px; }
         .section-label {
             font-size: 12px; font-weight: 600; color: var(--accent);
@@ -328,7 +333,9 @@
             padding: 16px 32px; background: var(--accent); color: white;
             font-size: 16px; font-weight: 600; border-radius: 12px;
             border: none; cursor: pointer; transition: all 0.3s; font-family: inherit;
+            max-width: 100%; word-break: break-all;
         }
+        @media (max-width: 400px) { .contact-email-btn { padding: 14px 24px; font-size: 14px; } }
         .contact-email-btn:hover { transform: translateY(-2px); box-shadow: 0 15px 40px rgba(99, 102, 241, 0.3); }
         .social-links { display: flex; justify-content: center; gap: 12px; margin-top: 32px; }
         .social-link {
@@ -438,7 +445,7 @@
                     </p>
                 </div>
                 <div class="about-illustration fade-up stagger-2" style="display: flex; justify-content: center;">
-                    <svg width="280" height="200" viewBox="0 0 280 200" fill="none" xmlns="http://www.w3.org/2000/svg" style="opacity: 0.6;">
+                    <svg width="280" height="200" viewBox="0 0 280 200" fill="none" xmlns="http://www.w3.org/2000/svg" style="opacity: 0.6; max-width: 100%; height: auto;">
                         <!-- Monitor -->
                         <rect x="40" y="20" width="200" height="130" rx="8" stroke="var(--text-muted)" stroke-width="1.5" fill="none"/>
                         <rect x="50" y="30" width="180" height="100" rx="4" stroke="var(--text-muted)" stroke-width="1" fill="none"/>
