--- a/index.html
+++ b/index.html
@@ -438,7 +438,7 @@
                 </style>
                 <div class="about-content fade-up stagger-1">
                     <p style="font-size: 17px; color: var(--text-muted); line-height: 1.8; margin-bottom: 20px;">
-                        Customer Success professional and MERN stack developer bridging complex software with user-centric value. At <strong style="color: var(--text);">Zedd Customer Solutions</strong>, I manage enterprise accounts through deep relationship management and technical product expertise.
+                        Technical Support Engineer and MERN stack developer bridging complex software with user-centric value. At <strong style="color: var(--text);">Zedd Customer Solutions</strong>, I manage enterprise accounts through deep relationship management and technical product expertise.
                     </p>
                     <p style="font-size: 17px; color: var(--text-muted); line-height: 1.8;">
                         I also build full-stack web apps to understand the developer journey and create better tools — leveraging this hybrid background to deliver high-impact experiences.
@@ -529,7 +529,7 @@
                     <div class="timeline-date">2023 — Now</div>
                     <div class="timeline-content">
                         <h3>Zedd Customer Solutions</h3>
-                        <div class="role">Customer Success Specialist</div>
+                        <div class="role">Technical Support Engineer</div>
                         <p>Managing enterprise accounts, driving adoption, and maintaining 94%+ QA scores across 50+ clients.</p>
                     </div>
                 </div>
@@ -682,3 +682,4 @@
     </script>
 </body>
 </html>
+
